--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
                 <h3 class="text-animation">
                     <span></span>
                 </h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Hic amet sint optio quaerat, quod fugit recusandae suscipit deserunt, 
-                    tenetur dolores officia? Exercitationem sunt aperiam hic voluptate cum odio numquam quae.</p>
+                <p>I am a BTech Computer Science and Engineering Student at model Engineering college.
+                    My passion is to become a Full Stack Developer and develop innovative ideas using these 
+                    ideas make changes in our society.
+                </p>
                     <a href="#" class="btn">Read More</a>
             </div>
             <div class="about-img">
